Update related links in date and time component guides
Revised the 'Related' sections in date-picker, date-time-picker, input-date-time, and input-time documentation to add a link to writing guidelines for date and time, and to remove or reorder other related links for improved clarity and consistency.

--- a/docs/components/date-picker/guide.mdx
+++ b/docs/components/date-picker/guide.mdx
@@ -68,4 +68,4 @@ Individual calendar dates within a date picker have five states: Default, hover,
 - [Date input](../input)
 - [Date time picker](../date-time-picker)
 - [Time picker](../time-picker)
-- [Dropdown](../dropdown)
+- [Writing guidelines for date and time](../../guidelines/language/formatting/date.mdx)
