--- a/docs/components/input-date-time/guide.mdx
+++ b/docs/components/input-date-time/guide.mdx
@@ -90,13 +90,10 @@ Date time input has five states: Default, hover, disabled, read-only and focused
 
 ## Related
 
-- [Date input](../input-date)
-- [Time input](../input-time)
-- [Date time picker](../date-time-picker)
-- [Date picker](../date-picker)
 - [Time picker](../time-picker)
+- [Date time picker](../date-time-picker)
+- [Time input](../input-time)
+- [Date input](../input-date)
 - [Forms field](../forms-field)
 - [Validation](../forms-validation)
-- [Dropdown](../dropdown)
-- [Input](../input)
-- [Select](../select)
+- [Writing guidelines for date and time](../../guidelines/language/formatting/date.mdx)
