--- a/docs/components/input-time/guide.mdx
+++ b/docs/components/input-time/guide.mdx
@@ -76,8 +76,7 @@ Time input has five states: Default, hover, disabled, read-only and focused.
 
 - [Time picker](../time-picker)
 - [Date time picker](../date-time-picker)
+- [Date time input](../input-date-time)
 - [Forms field](../forms-field)
 - [Validation](../forms-validation)
-- [Dropdown](../dropdown)
-- [Input](../input)
-- [Select](../select)
+- [Writing guidelines for date and time](../../guidelines/language/formatting/date.mdx)
