--- a/docs/components/date-time-picker/guide.mdx
+++ b/docs/components/date-time-picker/guide.mdx
@@ -70,3 +70,4 @@ Individual calendar dates within a date time picker have five states: Default, h
 - [Date picker](../date-picker)
 - [Time picker](../time-picker)
 - [Date time input](../input)
+- [Writing guidelines for date and time](../../guidelines/language/formatting/date.mdx)
