--- a/docs/icons/icon-usage.mdx
+++ b/docs/icons/icon-usage.mdx
@@ -37,7 +37,7 @@ The illustration demonstrates the standard layout, featuring the apps icon in th
 Upon resizing to a smaller screen, the layout adapts:
 - the left navigation collapses into a menu icon in the header
 - the apps icon then relocates into this expandable menu
-- actions previously visible in the header are now accessible via a dropdown, indicated by the more menu icon
+- actions previously visible in the header move into a dropdown, indicated by the more menu icon
 
 ![Menu icons small screens](https://www.figma.com/design/wEptRgAezDU1z80Cn3eZ0o/iX-Documentation-illustrations?node-id=7428-36686&t=HOxEXsgRcyJFe982-4)
 
