docs: New error pages corrected

--- a/docs/guidelines/language/infotips.mdx
+++ b/docs/guidelines/language/infotips.mdx
@@ -3,7 +3,7 @@
 
 ## Infotips
 
-Infotips are short, context-sensitive messages that appear near user interface elements to offer additional guidance or further context. Infotips or popovers are often triggered by clicking an information icon or expanding a section. For guidelines on validation and placeholder texts, see the password and logging in section. 
+Infotips are short, context-sensitive messages that appear near user interface elements to offer additional guidance or further context. Infotips or popovers are often triggered by clicking an information icon or expanding a section. For guidelines on validation and placeholder texts, see the password and logging in section.
 
 
 ## General rules
@@ -20,7 +20,7 @@ VIEW CURRENT STATUS OF PRODUCTION LINE
 </div>
 <br>
 
-Use infotips to support users with guidance and contextual information. 
+Use infotips to support users with guidance and contextual information.
 
 <div class="dos-and-donts" markdown>
  <div class="dos" markdown>
@@ -52,7 +52,7 @@ This indicates the time (in milliseconds) it takes for the Programmable Logic Co
 </div>
 <br>
 
-Use infotips to help users understand complex features. 
+Use infotips to help users understand complex features.
 
 <div class="dos-and-donts" markdown>
  <div class="dos" markdown>
@@ -66,7 +66,7 @@ Adjust these parameters (Proportional, Integral, Derivative) to optimize the sys
 </div>
 <br>
 
-Use infotips to help users understand complex workflows. 
+Use infotips to help users understand complex workflows.
 
 <div class="dos-and-donts" markdown>
  <div class="dos" markdown>
@@ -101,7 +101,7 @@ Define and manage sequences of operations and ingredient quantities for automate
 </div>
 <br>
 
-Avoid personal pronouns (you, we, our, etc.). 
+Avoid personal pronouns (you, we, our, etc.).
 
 <div class="dos-and-donts" markdown>
  <div class="dos" markdown>
@@ -109,7 +109,7 @@ Select a device from the network to begin configuration.
  </div>
 
  <div class="donts" markdown>
-Select one of your devices to begin configuring your factory assets. 
+Select one of your devices to begin configuring your factory assets.
  </div>
 </div>
 
@@ -117,10 +117,10 @@ Select one of your devices to begin configuring your factory assets.
 ## Dos and Don’ts
 
 * Do keep infotips short and instructional
-* Don’t include critical or legal information  
+* Don’t include critical or legal information
 * Don’t copy your user manual into your infotips
 
 ## Related
 
-* [Popover]
-* [Tooltips]
+* [Popover](#)
+* [Tooltips](#)
