--- a/docs/guidelines/language/empty-state-messages.mdx
+++ b/docs/guidelines/language/empty-state-messages.mdx
@@ -7,13 +7,13 @@ Empty-state messages guide users, reduce confusion, and encourage meaningful act
 
 ### Best practice template
 
-We follow this three-step approach when creating our empty-state messages. They explain why data is missing, suggest how to populate it, or offer links to relevant tools and documentation. Although not every empty-state message in a product requires all three steps, aim for this whenever possible.  
+We follow this three-step approach when creating our empty-state messages. They explain why data is missing, suggest how to populate it, or offer links to relevant tools and documentation. Although not every empty-state message in a product requires all three steps, aim for this whenever possible.
 
-| Step  | Purpose | Description | Example  |
+| Step | Purpose | Description | Example |
 | :--------- | :---------- | :--------- |:--------- |
-| 1. | Heading | Explain this is empty intentionally and should be there, i.e. this empty space is not an error.  | No projects added  |
-| 2. | Description | Give a clear reason why this space is empty. Provide context to help users understand the purpose of the empty-state space.| To display projects here, first add a project from your Project list.  |
-| 3. | Instructions | Explain how users can fill the space by adding links, buttons and suggestions to move the user forward.   | Add projects   |
+| 1. | Heading | Explain this is empty intentionally and should be there, i.e. this empty space is not an error. | No projects added |
+| 2. | Description | Give a clear reason why this space is empty. Provide context to help users understand the purpose of the empty-state space. | To display projects here, first add a project from your Project list. |
+| 3. | Instructions | Explain how users can fill the space by adding links, buttons and suggestions to move the user forward. | Add projects |
 
 
 ## General rules
@@ -23,14 +23,14 @@ Use the template when the error stops users moving forward.
 <div class="dos-and-donts" markdown>
  <div class="dos" markdown>
 Heading: No zones added
-Description: Add zones to your profile to see them listed here. 
+Description: Add zones to your profile to see them listed here.
 
 Button: Add zones
  </div>
 
  <div class="donts" markdown>
 Heading: No zones created
-Description: Add region from your dashboard. 
+Description: Add region from your dashboard.
 
 Button: Make sectors
  </div>
@@ -41,14 +41,14 @@ Use clear action verbs to show users how to fill the empty state.
 
 <div class="dos-and-donts" markdown>
  <div class="dos" markdown>
-Heading: No users added 
-Description: Add users in User management. 
+Heading: No users added
+Description: Add users in User management.
 Button: Open User management
  </div>
 </div>
 <br>
 
-Use neutral framing of the empty state and avoid making it seem like a user failure.  
+Use neutral framing of the empty state and avoid making it seem like a user failure.
 
 <div class="dos-and-donts" markdown>
  <div class="dos" markdown>
@@ -77,12 +77,12 @@ Title: No users added yet
 
 * Do make all messages consistent in terms of grammar and punctuation
 * Do make sure users understand the space is not an error or a bug
-* Do provide an option to fill the empty space with a button or link 
+* Do provide an option to fill the empty space with a button or link
 * Don’t overcommunicate about the function of the empty state
 
 ## Related
 
 * [Icon usage](https://ix.siemens.io/docs/icons/icon-usage#status-icons)
-* [Error messages]
-* [Warning messages]
-* [Non-critical information messages]
+* [Error messages](#)
+* [Warning messages](#)
+* [Non-critical information messages](docs/)
