docs new error page

--- a/docs/guidelines/language/empty-state-messages.mdx
+++ b/docs/guidelines/language/empty-state-messages.mdx
@@ -1,5 +1,14 @@
-
 ---
+sidebar_position: 4
+sidebar_label: Messaging
+title: Empty-state messages
+doc-type: 'banner'
+component-tabs: ['']
+no_single_tab: true
+description: 'Learn the guidelines for using empty-state messages correctly in your text. This subchapter will help you understand when and how to capitalize names, brands, and other specific terms to maintain consistency and professionalism.'
+---
+
+#
 
 ## Empty-state messages
 
@@ -21,56 +30,53 @@ We follow this three-step approach when creating our empty-state messages. They 
 Use the template when the error stops users moving forward.
 
 <div class="dos-and-donts" markdown>
- <div class="dos" markdown>
+<div class="dos" markdown>
 Heading: No zones added
 Description: Add zones to your profile to see them listed here.
 
 Button: Add zones
- </div>
+</div>
 
- <div class="donts" markdown>
+<div class="donts" markdown>
 Heading: No zones created
 Description: Add region from your dashboard.
 
 Button: Make sectors
- </div>
 </div>
-<br>
+</div>
 
 Use clear action verbs to show users how to fill the empty state.
 
 <div class="dos-and-donts" markdown>
- <div class="dos" markdown>
+<div class="dos" markdown>
 Heading: No users added
 Description: Add users in User management.
 Button: Open User management
- </div>
 </div>
-<br>
+</div>
 
 Use neutral framing of the empty state and avoid making it seem like a user failure.
 
 <div class="dos-and-donts" markdown>
- <div class="dos" markdown>
- No users added
- </div>
-
- <div class="donts" markdown>
-You haven’t added any of your users
- </div>
+<div class="dos" markdown>
+No users added
 </div>
-<br>
+
+<div class="donts" markdown>
+You haven’t added any of your users
+</div>
+</div>
 
 Avoid “yet” or other expectation-related terms in titles.
 
 <div class="dos-and-donts" markdown>
- <div class="dos" markdown>
- Heading: No users added
- </div>
+<div class="dos" markdown>
+Heading: No users added
+</div>
 
- <div class="donts" markdown>
+<div class="donts" markdown>
 Title: No users added yet
- </div>
+</div>
 </div>
 
 ## Dos and Don’ts
@@ -85,4 +91,4 @@ Title: No users added yet
 * [Icon usage](https://ix.siemens.io/docs/icons/icon-usage#status-icons)
 * [Error messages](#)
 * [Warning messages](#)
-* [Non-critical information messages](docs/)
+* [Non-critical information messages](#)
