--- a/docs/icons/icon-usage.mdx
+++ b/docs/icons/icon-usage.mdx
@@ -26,18 +26,22 @@ Examples
 
 ## Menu icons
 
-We use distinct icons to signal different types of menus.
+We use distinct icons to signal different types of menus:
 
 <IconTable data={IconExamplesMenu}></IconTable>
 
-The illustration demonstrates the standard layout, featuring the apps icon in the header and an open context menu for a list item.
+The [drag-gripper icon](icon-library#drag-gripper) is visually similar but is not a menu icon and should be used for drag-and-drop interactions to reorder items.
+
+### Example of menu icons
+
+The illustration demonstrates the standard layout, featuring the apps icon in the [application header](../components/application-header/guide.md) and an open context menu for an event list item.
 
 ![Menu icons](https://www.figma.com/design/wEptRgAezDU1z80Cn3eZ0o/iX-Documentation-illustrations?node-id=7420-16011&t=HOxEXsgRcyJFe982-4)
 
-Upon resizing to a smaller screen, the layout adapts:
-- the left navigation collapses into a menu icon in the header
-- the apps icon then relocates into this expandable menu
-- actions previously visible in the header move into a dropdown, indicated by the more menu icon
+Upon resizing to a smaller screen, the [layout adapts](../components/application-header/guide#behavior):
+- The left navigation collapses into a menu icon in the header.
+- The app switch icon then relocates into this expandable menu.
+- Actions previously visible in the application header move into a dropdown, indicated by the more menu icon.
 
 ![Menu icons small screens](https://www.figma.com/design/wEptRgAezDU1z80Cn3eZ0o/iX-Documentation-illustrations?node-id=7428-36686&t=HOxEXsgRcyJFe982-4)
 
