Update date/time picker docs and add accessibility reference
Improved documentation for date picker, date-time picker, input-date-time, input-date, input-time, and time picker components with clearer option descriptions and behavior explanations. Added links to the W3C date picker accessibility reference for all related guides. Updated Figma illustration for date-time picker states.

--- a/docs/components/date-picker/guide.mdx
+++ b/docs/components/date-picker/guide.mdx
@@ -10,31 +10,29 @@ Date pickers provide a versatile calendar that can be used as a standalone eleme
 
 1. Month and year navigation
 2. Weekday labels
-3. Calendar weeks
+3. Week numbers
 4. Selected date or date range
 5. Confirm [button](../button)
 
 ## Options
 
-- **Value**: The selected date value. In range mode, both start and end dates can be defined.
-- **Single selection**: By default, date pickers support range selection. Enable single selection mode when only one date needs to be selected.
-- **Format**: Define the date format using tokens (e.g. 'yyyy/LL/dd'). This determines how dates are displayed and returned by the component.
-- **Locale**: Set the locale identifier (e.g. 'en' or 'de') to translate weekday and month labels and the default week start.
-- **Week start**: Define which day the week starts on, based on the locale’s weekdays array. This allows customization beyond the default locale settings.
-- **Week numbers**: Show week numbers on the left side of the calendar when needed for reference.
+- **Value**: Defines the selected date or date range.
+- **Single selection**: By default, users select date ranges. Use single selection to allow selecting a single date.
+- **Format**: Define the date format that determines how dates are displayed, e.g. `yyyy/LL/dd` for `2024/06/15`.
+- **Week start**: Define which day the week starts on. By default, it will be defined based on the locale.
+- **Week numbers**: Show calendar weeks on the left side of the calendar when needed for reference.
 - **Min and max dates**: Restrict the selectable date range by defining the earliest and latest dates users can choose.
 - **Corners**: By default, date pickers show rounded corners to be consistent with the [dropdown](../dropdown). Use straight, left or right corners to combine with other components.
-- **Button text**: Customize the text of the confirmation button to match your application’s language and context.
 
 ## Behavior in context
 
-- **Range selection**: When in range mode, users select a start date first, then an end date. The period between both dates is visually highlighted to provide clear feedback.
-- **Month navigation**: Users can navigate between months using the previous and next buttons in the header. This allows quick access to dates outside the current view.
+- **Range selection**: In range mode users select a start date and then an end date. The time period between both dates is visually highlighted to provide clear feedback.
+- **Month navigation**: Users can navigate between months using the arrow buttons in the header or the dropdown menu to quickly jump to a specific month and year.
 - **Interaction**: Users can navigate through the date picker using the keyboard. The following keys are supported:
   - **Tab**: Navigate between areas of the date picker (header, body, footer).
   - **Arrow keys**: Move through dates in the calendar.
   - **Enter or click**: Select the highlighted date.
-  - **Escape**: Close the date picker when used in a dropdown.
+  - **Escape**: Close date pickers when used in a dropdown. If header dropdown for month/year selection is open, it closes first.
 
 ## States
 
@@ -69,3 +67,4 @@ Individual calendar dates within a date picker have five states: Default, hover,
 - [Date time picker](../date-time-picker)
 - [Time picker](../time-picker)
 - [Writing guidelines for date and time](../../guidelines/language/formatting/date.mdx)
+- [W3C date picker accessibility reference](https://www.w3.org/WAI/ARIA/apg/patterns/combobox/examples/combobox-datepicker/)
