--- a/docs/components/input-time/guide.mdx
+++ b/docs/components/input-time/guide.mdx
@@ -80,3 +80,4 @@ Time input has five states: Default, hover, disabled, read-only and focused.
 - [Forms field](../forms-field)
 - [Validation](../forms-validation)
 - [Writing guidelines for date and time](../../guidelines/language/formatting/date.mdx)
+- [W3C date picker accessibility reference](https://www.w3.org/WAI/ARIA/apg/patterns/combobox/examples/combobox-datepicker/)
