--- a/docs/components/time-picker/guide.mdx
+++ b/docs/components/time-picker/guide.mdx
@@ -61,3 +61,4 @@ An individual time item of a time picker has five states: Default, hover, active
 - [Date picker](../date-picker)
 - [Date time picker](../date-time-picker)
 - [Dropdown](../dropdown)
+- [W3C date picker accessibility reference](https://www.w3.org/WAI/ARIA/apg/patterns/combobox/examples/combobox-datepicker/)
