Fix broken links in date-time picker guide
Updated references to date picker and time picker states to point to the correct guide sections, ensuring documentation links work as intended.

--- a/docs/components/date-time-picker/guide.mdx
+++ b/docs/components/date-time-picker/guide.mdx
@@ -39,7 +39,7 @@ Date time pickers offer an interface for selecting both dates and times, which c
 
 ## States
 
-Individual calendar dates within a date time picker have five states: Default, hover, active, disabled and focused. Dates outside the allowed range appear in a disabled state and cannot be selected (see [date picker states](../date-picker#states) and [time picker states](../time-picker#states) for reference).
+Individual calendar dates within a date time picker have five states: Default, hover, active, disabled and focused. Dates outside the allowed range appear in a disabled state and cannot be selected (see [date picker](../date-picker/guide#states) and [time picker](../time-picker/guide#states) for reference).
 
 ## Dos and Don’ts
 
