docs:uxw_errors_emptystate_infotips_updates

--- a/docs/guidelines/language/empty-state-messages.mdx
+++ b/docs/guidelines/language/empty-state-messages.mdx
@@ -1,20 +1,16 @@
 ---
-sidebar_position: 4
-sidebar_label: Messaging
+sidebar_position: 7
+sidebar_label: Empty-state messages
 title: Empty-state messages
 doc-type: 'banner'
 component-tabs: ['']
 no_single_tab: true
-description: 'Learn the guidelines for using empty-state messages correctly in your text. This subchapter will help you understand when and how to capitalize names, brands, and other specific terms to maintain consistency and professionalism.'
+description: 'Empty-state messages guide users, reduce confusion, and encourage meaningful action. Rather than leaving screens blank, they provide contextual messaging and clear next steps.'
 ---
 
 #
 
-## Empty-state messages
-
-Empty-state messages guide users, reduce confusion, and encourage meaningful action. Rather than leaving screens blank, they provide contextual messaging and clear next steps.
-
-### Best practice template
+## Best practice template
 
 We follow this three-step approach when creating our empty-state messages. They explain why data is missing, suggest how to populate it, or offer links to relevant tools and documentation. Although not every empty-state message in a product requires all three steps, aim for this whenever possible.
 
