--- a/docs/guidelines/language/error-messages.mdx
+++ b/docs/guidelines/language/error-messages.mdx
@@ -1,11 +1,15 @@
-
 ---
+sidebar_position: 8
+sidebar_label: Error messages
+title: Error messages
+doc-type: 'banner'
+component-tabs: ['']
+no_single_tab: true
+description: 'Error messages inform users when a system encounters a problem or unexpected condition. Unlike general notifications, error messages must both attract user attention and prompt corrective actions.'
 
-## Error messages
+#
 
-Error messages inform users when a system encounters a problem or unexpected condition. Unlike general notifications, error messages must both attract user attention and prompt corrective actions.
-
-### Best practice template
+## Best practice template
 
 We follow this three-step approach when creating our error messages. This empowers users when encountering errors and gives them the knowledge and confidence they need to move on. For more guidance on error messages with different severity levels, see states and events.
 
