--- a/docs/guidelines/language/infotips.mdx
+++ b/docs/guidelines/language/infotips.mdx
@@ -1,9 +1,14 @@
-
 ---
+sidebar_position: 10
+sidebar_label: Infotips
+title: Infotips
+doc_type: 'banner'
+component-tabs: ['']
+no_single_tab: true
+description: 'Infotips are short, context-sensitive messages that appear near user interface elements to offer additional guidance or further context. Infotips or popovers are often triggered by clicking an information icon or expanding a section. For guidelines on validation and placeholder texts, see the password and logging in section.'
 
-## Infotips
 
-Infotips are short, context-sensitive messages that appear near user interface elements to offer additional guidance or further context. Infotips or popovers are often triggered by clicking an information icon or expanding a section. For guidelines on validation and placeholder texts, see the password and logging in section.
+#
 
 
 ## General rules
